# humipy

./: .gitignore  README.md  db_management.sql  pyproject.toml
src/humipy/: __main__.py  cli.py  meteomatics.py  models.py  read_database.py  send.py  views.py  write_database.py
src/humipy/database/: _dummy.py  connect.py  models.py  read.py  write.py
src/humipy/views/: exit.py  locations.py  measurements.py  menus.py  sensor_locations.py  sensors.py
