[project]
name = "humiPy"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "python-dateutil==2.8.2",
    "sqlalchemy==2.0.23",
    "pandas==2.1.4",
    "rich==13.7.0",
]

[project.scripts]
humipy = "humipy.__main__:main"

[project.optional-dependencies]
dev = [
    "mypy==1.7.1",
]